<resources>
    <string name="app_name">calculator</string>
    <string name="default_result">0</string>
    <string name="button_all_clean">AC</string>
    <string name="button_delete_sign">&#8882;</string>
    <string name="button_percent">%</string>
    <string name="button_divide">&#247;</string>
    <string name="button_multiply">&#215;</string>
    <string name="button_minus">&#8722;</string>
    <string name="button_plus">+</string>
    <string name="button_dot">.</string>
    <string name="button_equal">=</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_theme_switch">&#8634;</string>
</resources>